# datex-ingest

./: .gitignore  .pre-commit-config.yaml  Dockerfile  crontab  entrypoint.sh  influxdb.http  pyproject.toml
src/datex_ingest/: __init__.py  constants.py  datex_api.py  influxdb.py  main.py
