[tool.poetry]
name = "datex-ingest"
version = "0.1.0"
description = ""
authors = ["Martin Høy <marhoy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = {extras = ["dotenv"], version = "^1.9.1"}
requests = "^2.27.1"
lxml = "^4.8.0"
influxdb-client = "^1.29.1"

[tool.poetry.dev-dependencies]
pytest = "^7.3"
ipykernel = "^6.13"
black = "^23.3"
flake8 = "^6.0"
mypy = "^1.3"
pydocstyle = "^6.1"
pre-commit = "^3.3"
types-requests = "^2.27"

[tool.poetry.scripts]
datex_ingest = 'datex_ingest.main:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
